IComputerDao has new methods ComputerDaoImpl almost finished dashboard.jsp is a copy of the scala project web.xml : add the jsp-config for jstl New DaoException class New IComputerService New ComputerServiceImpl Add css : bootstrap.min.css and main.css DashboardController uses a IComputerService instead of a IComputerDao

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,11 @@
 	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
+	<jsp-config>
+		<jsp-property-group>
+			<url-pattern>*.jsp</url-pattern>
+			<include-prelude>/WEB-INF/jsp/taglibs.jsp</include-prelude>
+		</jsp-property-group>
+	</jsp-config>
+
 </web-app>
