CompanyDaoImpl : add of list() method ComputerDaoImpl : fixing of insert() method about company.getId() if company is null DaoException : created for try catch in DaoImpl DaoUtils : fixing of silentClosing because no test if is null ICompanyDao, CompanyDao : findById(), list() Company : add toString() method Computer : change Integer companyId to Company company computers.jsp : use headerMenu.tag for sorting headerMenu.tag : taglib for column sorting AForm : abstract class for all forms AddComputerForm : the instert form FormUtils : util methods for all forms FormValidationException : exception for form ICompanyService, CompanyServiceImpl : findById(), list() AddComputerController : servlet to add a computer addComputer.jsp : view to add a computer stylesheets.jsp : contains links to the css -> need to be imported

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,8 @@
 		</jsp-property-group>
 	</jsp-config>
 
+	<welcome-file-list>
+		<welcome-file>/computers</welcome-file>
+	</welcome-file-list>
+
 </web-app>
