--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
 	<!-- Common dependencies -->
 	<dependencies>
-		<!-- Logging -->
+		<!-- LOGGING -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -68,7 +68,15 @@
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
 				<version>${spring.version}</version>
+			<!-- 	<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions> -->
 			</dependency>
+	<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>jcl-over-slf4j</artifactId> 
+		<version>${slf4j.version}</version> </dependency> -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -206,6 +214,12 @@
 				<groupId>com.excilys.cdb</groupId>
 				<artifactId>cdb-webapp</artifactId>
 				<version>0.7.WS</version>
+			</dependency>
+			<!-- LOGGING -->
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
